mule-user-guide/v/3.7/deploying-mule-as-a-service-to-tomcat.adoc
= 将Mule作为服务部署到Tomcat
:keywords: deploy, deploying, tomcat

本页面描述了两个使您能够在Tomcat Web服务器上部署Mule应用程序的活动：

* 将Mule作为服务安装在Apache Tomcat服务器上

* 设置您的Mule应用程序进行热部署

有关热部署Mule应用程序的更多信息，请参阅 link:/mule-user-guide/v/3.7/application-server-based-hot-deployment[基于应用服务器的热部署]。

这些说明已在Mule 3.7.3中得到验证

== 在Tomcat上安装Mule

.  link:http://tomcat.apache.org[下载]并按照Apache的安装说明安装Apache Tomcat。

. 在系统的Tomcat主目录中，将以下行添加到`conf/server.xml`文件中：
+
[source, xml]
----
<Listener className="org.mule.module.tomcat.MuleTomcatListener" />
----

. 在Tomcat主目录下创建一个`mule-libs`子目录。
. 将其所有子目录 -  *except* `/boot`的Mule `lib`文件夹的内容复制到Tomcat主目录的`mule-libs/`子目录中。不要压扁目录结构。
. 将`mule-module-tomcat-<version>.jar`文件复制到Tomcat主目录中的`mule-libs/mule/`目录。
. 将以下库从您的Mule `lib/boot/`目录复制到您的Tomcat `mule-libs/opt/`目录中：

*  `commons-cli-1.2.jar`
*  `jcl-over-slf4j-1.7.7.jar`
*  `log4j-jcl-2.1.jar`
*  `slf4j-api-1.7.7.jar`
*  `disruptor-3.3.0.jar`
*  `wrapper-3.5.26.jar`
*  `log4j-slf4j-impl-2.1.jar`
*  `log4j-api-2.1.jar`
*  `log4j-core-2.1.jar`

. 在Tomcat `conf/catalina.properties`文件中，将以下内容添加到`common.loader`（以逗号将其与现有值分开）：
+
[source]
----
${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar,${catalina.home}/mule-libs/user/*.jar,${catalina.home}/mule-libs/mule/*.jar,${catalina.home}/mule-libs/opt/*.jar,${catalina.home}/mule-libs/endorsed/*.jar 
----
+
[NOTE]
====
确保您的`web.xml`文件中只有一个侦听器：

[source,xml,linenums]
----
<listener> 
<listener-class> 
org.mule.module.tomcat.MuleTomcatListener 
</listener-class> 
</listener> 
----
====

== 在Tomcat中部署Mule应用程序

. 将您的Mule应用程序的配置文件和自定义Java类打包到`.war`文件中（请参阅 link:/mule-user-guide/v/3.7/application-server-based-hot-deployment[基于应用服务器的热部署]）。

在Maven项目中，所有Mule提供的依赖关系（即mule-libs目录中提供的任何库）必须提供<scope>提供的</scope>定义，以防止类加载重复库之间的冲突。

. 复制您的应用程序的`.war`文件，然后将其粘贴到Tomcat `/webapps`目录中。

.  Tomcat热部署应用程序。

如果需要更改Mule应用程序中的配置或Java文件，请修改Tomcat `/webapps`目录下展开的目录中的文件，然后触摸`web.xml`文件（例如，只需添加并删除文件中的空间然后保存它）。这些操作会触发Tomcat重新部署应用程序。

或者，您可以修改应用程序的源文件，将其重新打包为`.war`文件，然后将新`.war`文件放入`/webapps`目录以触发Tomcat重新部署应用程序。

== 另请参阅

* 了解如何在 link:/runtime-manager/cloudhub[CloudHub]中部署云中的Mule应用程序。
